--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -888,13 +888,13 @@
   "pli-tv-kd11:24.1.5": "and a third time. ",
   "pli-tv-kd11:24.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:24.1.7": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:24.1.8": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of reconciliation to be lifted. ",
+  "pli-tv-kd11:24.1.8": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:24.1.9": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of reconciliation against him. ",
   "pli-tv-kd11:24.1.10": "This is the motion. ",
   "pli-tv-kd11:24.1.11": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:24.1.12": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of reconciliation to be lifted. ",
+  "pli-tv-kd11:24.1.12": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:24.1.13": "The Sangha lifts the legal procedure of reconciliation against him. ",
-  "pli-tv-kd11:24.1.14": "Any monk who approves of lifting the legal procedure of reconciliation against the monk Sudhamma should remain silent. ",
+  "pli-tv-kd11:24.1.14": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:24.1.15": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:24.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:24.1.17": "For the third time I speak on this matter. ",
