--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -899,9 +899,9 @@
   "pli-tv-kd11:24.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:24.1.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:24.1.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:24.1.19": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of reconciliation to be lifted. ",
+  "pli-tv-kd11:24.1.19": "The Sangha has done a legal procedure of reconciliation against the monk Sudhamma. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:24.1.20": "The Sangha lifts the legal procedure of reconciliation against him. ",
-  "pli-tv-kd11:24.1.21": "Any monk who approves of lifting the legal procedure of reconciliation against the monk Sudhamma should remain silent. ",
+  "pli-tv-kd11:24.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:24.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:24.1.23": "The Sangha has lifted the legal procedure of reconciliation against the monk Sudhamma. ",
   "pli-tv-kd11:24.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
