--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -941,10 +941,10 @@
   "pli-tv-kd11:25.2.16": "For the third time I speak on this matter. ",
   "pli-tv-kd11:25.2.17": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:25.2.18": "The monk Channa has committed an offense, but refuses to recognize it. ",
-  "pli-tv-kd11:25.2.19": "The Sangha is doing a legal procedure of ejecting Channa for not recognizing an offense, ",
+  "pli-tv-kd11:25.2.19": "The Sangha does a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.20": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:25.2.21": "Any monk who approves of doing a legal procedure of ejecting Channa for not recognizing an offense, ",
-  "pli-tv-kd11:25.2.22": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:25.2.21": "Any monk who approves of doing this legal procedure ",
+  "pli-tv-kd11:25.2.22": "should remain silent. ",
   "pli-tv-kd11:25.2.23": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:25.2.24": "The Sangha has done the legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.25": "prohibiting him from living with the Sangha. ",
