--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1042,7 +1042,7 @@
   "pli-tv-kd11:27.1.37": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:27.1.38": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:27.1.39": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:27.1.40": "He shouldn’t order a regular monk in regard to an offense. ",
+  "pli-tv-kd11:27.1.40": "He shouldn’t direct a regular monk who’s committed an offense. ",
   "pli-tv-kd11:27.1.41": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:27.1.42": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:27.1.43": "He shouldn’t accuse a regular monk of an offense. ",
