--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1111,7 +1111,7 @@
   "pli-tv-kd11:30.1.5": "and a third time. ",
   "pli-tv-kd11:30.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:30.1.7": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:30.1.8": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of ejection to be lifted. ",
+  "pli-tv-kd11:30.1.8": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:30.1.9": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:30.1.10": "This is the motion. ",
   "pli-tv-kd11:30.1.11": "Please, Venerables, I ask the Sangha to listen. ",
