--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1115,14 +1115,14 @@
   "pli-tv-kd11:30.1.9": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:30.1.10": "This is the motion. ",
   "pli-tv-kd11:30.1.11": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:30.1.12": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of ejection to be lifted. ",
+  "pli-tv-kd11:30.1.12": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:30.1.13": "The Sangha lifts the legal procedure of ejecting him for not recognizing an offense. ",
-  "pli-tv-kd11:30.1.14": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not recognizing an offense should remain silent. ",
+  "pli-tv-kd11:30.1.14": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:30.1.15": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:30.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:30.1.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:30.1.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:30.1.19": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of ejection to be lifted. ",
+  "pli-tv-kd11:30.1.19": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:30.1.20": "The Sangha lifts the legal procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:30.1.21": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not recognizing an offense should remain silent. ",
   "pli-tv-kd11:30.1.22": "Any monk who doesn’t approve should speak up. ",
