--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1124,7 +1124,7 @@
   "pli-tv-kd11:30.1.18": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:30.1.19": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:30.1.20": "The Sangha lifts the legal procedure of ejecting him for not recognizing an offense. ",
-  "pli-tv-kd11:30.1.21": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not recognizing an offense should remain silent. ",
+  "pli-tv-kd11:30.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:30.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:30.1.23": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not recognizing an offense. ",
   "pli-tv-kd11:30.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
