--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1155,10 +1155,10 @@
   "pli-tv-kd11:31.1.23": "This is the motion. ",
   "pli-tv-kd11:31.1.24": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:31.1.25": "The monk Channa has committed an offense, but refuses to make amends for it. ",
-  "pli-tv-kd11:31.1.26": "The Sangha is doing a legal procedure of ejecting Channa for not making amends for an offense, ",
+  "pli-tv-kd11:31.1.26": "The Sangha does a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.27": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:31.1.28": "Any monk who approves of doing a legal procedure of ejecting Channa for not making amends for an offense, ",
-  "pli-tv-kd11:31.1.29": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:31.1.28": "Any monk who approves of doing that legal procedure ",
+  "pli-tv-kd11:31.1.29": "should remain silent. ",
   "pli-tv-kd11:31.1.30": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.31": "For the second time I speak on this matter … ",
   "pli-tv-kd11:31.1.32": "For the third time I speak on this matter. ",
