--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1166,8 +1166,8 @@
   "pli-tv-kd11:31.1.34": "The monk Channa has committed an offense, but refuses to make amends for it. ",
   "pli-tv-kd11:31.1.35": "The Sangha is doing a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.36": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:31.1.37": "Any monk who approves of doing a legal procedure of ejecting Channa for not making amends for an offense, ",
-  "pli-tv-kd11:31.1.38": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:31.1.37": "Any monk who approves of doing that legal procedure ",
+  "pli-tv-kd11:31.1.38": "should remain silent. ",
   "pli-tv-kd11:31.1.39": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.40": "The Sangha has done the legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.41": "prohibiting him from living with the Sangha. ",
