--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1265,7 +1265,7 @@
   "pli-tv-kd11:31.1.139": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:31.1.140": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.141": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:31.1.142": "He shouldn’t order a regular monk in regard to an offense. ",
+  "pli-tv-kd11:31.1.142": "He shouldn’t direct a regular monk who’s committed an offense. ",
   "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:31.1.144": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:31.1.145": "He shouldn’t accuse a regular monk of an offense. ",
