--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1332,9 +1332,9 @@
   "pli-tv-kd11:31.1.210": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:31.1.211": "For the third time I speak on this matter. ",
   "pli-tv-kd11:31.1.212": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.213": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of ejection to be lifted. ",
+  "pli-tv-kd11:31.1.213": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:31.1.214": "The Sangha lifts the legal procedure of ejecting him for not making amends for an offense. ",
-  "pli-tv-kd11:31.1.215": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not making amends for an offense should remain silent. ",
+  "pli-tv-kd11:31.1.215": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:31.1.216": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.217": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not making amends for an offense. ",
   "pli-tv-kd11:31.1.218": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
@@ -1371,11 +1371,11 @@
   "pli-tv-kd11:32.3.3": "“Is it true, Ariṭṭha, that you have a bad and erroneous view such as this: ",
   "pli-tv-kd11:32.3.4": "‘As I understand the Buddha’s Teaching, the things he calls obstructive are not able to obstruct one who indulges in them’?” ",
   "pli-tv-kd11:32.3.5": "“Yes indeed, Sir.” ",
-  "pli-tv-kd11:32.3.6": "“Foolish man, who do you think I have taught like this? ",
+  "pli-tv-kd11:32.3.6": "“Foolish man, who do you think I’ve taught like this? ",
   "pli-tv-kd11:32.3.7": "Haven’t I given many discourses about the obstructive things being obstructive ",
   "pli-tv-kd11:32.3.8": "and how they obstruct one who indulges in them? ",
-  "pli-tv-kd11:32.3.9": "I have said that there is little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
-  "pli-tv-kd11:32.3.10": "I have said that worldly pleasures are similar to a skeleton … ",
+  "pli-tv-kd11:32.3.9": "I’ve said that there is little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
+  "pli-tv-kd11:32.3.10": "I’ve said that worldly pleasures are similar to a skeleton … ",
   "pli-tv-kd11:32.3.11": "similar to a piece of meat … ",
   "pli-tv-kd11:32.3.12": "similar to a grass torch … ",
   "pli-tv-kd11:32.3.13": "similar to a pit of coals … ",
