--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1405,10 +1405,10 @@
   "pli-tv-kd11:32.4.11": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.12": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
   "pli-tv-kd11:32.4.13": "He’s not giving up that view. ",
-  "pli-tv-kd11:32.4.14": "The Sangha is doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
+  "pli-tv-kd11:32.4.14": "The Sangha is does a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.15": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:32.4.16": "Any monk who approves of doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
-  "pli-tv-kd11:32.4.17": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:32.4.16": "Any monk who approves of doing this legal procedure ",
+  "pli-tv-kd11:32.4.17": "should remain silent. ",
   "pli-tv-kd11:32.4.18": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:32.4.19": "For the second time I speak on this matter … ",
   "pli-tv-kd11:32.4.20": "For the third time I speak on this matter. ",
