--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1416,7 +1416,7 @@
   "pli-tv-kd11:32.4.22": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.23": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
   "pli-tv-kd11:32.4.24": "He’s not giving up that view. ",
-  "pli-tv-kd11:32.4.25": "The Sangha is doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
+  "pli-tv-kd11:32.4.25": "The Sangha does a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.26": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:32.4.27": "Any monk who approves of doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.28": "prohibiting him from living with the Sangha, should remain silent. ",
