--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1418,8 +1418,8 @@
   "pli-tv-kd11:32.4.24": "He’s not giving up that view. ",
   "pli-tv-kd11:32.4.25": "The Sangha does a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.26": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:32.4.27": "Any monk who approves of doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
-  "pli-tv-kd11:32.4.28": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:32.4.27": "Any monk who approves of doing this legal procedure ",
+  "pli-tv-kd11:32.4.28": "should remain silent. ",
   "pli-tv-kd11:32.4.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:32.4.30": "The Sangha has done the legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.31": "prohibiting him from living with the Sangha. ",
