--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1573,14 +1573,14 @@
   "pli-tv-kd11:35.1.11": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:35.1.12": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:35.1.13": "The Sangha lifts the legal procedure of ejecting him for not giving up a bad view. ",
-  "pli-tv-kd11:35.1.14": "Any monk who approves of lifting the legal procedure of ejecting monk so-and-so for not giving up a bad view should remain silent. ",
+  "pli-tv-kd11:35.1.14": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:35.1.15": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:35.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:35.1.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:35.1.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:35.1.19": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of ejection to be lifted. ",
+  "pli-tv-kd11:35.1.19": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:35.1.20": "The Sangha lifts the legal procedure of ejecting him for not giving up a bad view. ",
-  "pli-tv-kd11:35.1.21": "Any monk who approves of lifting the legal procedure of ejecting monk so-and-so for not giving up a bad view should remain silent. ",
+  "pli-tv-kd11:35.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:35.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:35.1.23": "The Sangha has lifted the legal procedure of ejecting monk so-and-so for not giving up a bad view. ",
   "pli-tv-kd11:35.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
