--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -2,5 +2,6 @@
   "mn4:0.1": "મજ્જ઼િમ નિકાય ૪",
   "mn4:0.2": "ભયભેરવ સૂત્ર",
   "mn4:1.1": "એવું મેં સાંભળ્યું—",
-  "mn4:1.2": "એક વખત ભગવંત શ્રાવસ્તિની પાસે અનાથપિંડિકાના જેતવનમાં વિહા૨ કરી રહ્યા હતા."
+  "mn4:1.2": "એક વખત ભગવંત શ્રાવસ્તિની પાસે અનાથપિંડિકાના જેતવનમાં વિહા૨ કરી રહ્યા હતા.",
+  "mn4:2.1": "તે વખતે જાનુસ્સોણિ બ્રાહ્મણ ભગવંત પાસે ગયા; પાસે જઇને શુભકામનાઓ આપી."
 }
