--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -5,5 +5,6 @@
   "mn4:1.2": "એક વખત ભગવંત શ્રાવસ્તિની પાસે અનાથપિંડિકાના જેતવનમાં વિહા૨ કરી રહ્યા હતા.",
   "mn4:2.1": "તે વખતે જાનુસ્સોણિ બ્રાહ્મણ ભગવંત પાસે ગયા; પાસે જઇને શુભકામનાઓ આપી.",
   "mn4:2.2": "જ્યારે શુભકામનાઓ અને વિનમ્ર વાતચીત પતી ગઇ ત્યારે એક બાજુ પર બેસીને એમણે ભગવંતને કહ્યું:",
-  "mn4:2.3": "“હે મિત્ર ગૌતમ, જે આ કુળપુત્રો આપ ગૌતમના નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમના આપ ગૌતમ અગ્રણી છો, મદદકાર છો, પ્રોત્સાહન આપનાર છો;"
+  "mn4:2.3": "“હે મિત્ર ગૌતમ, જે આ કુળપુત્રો આપ ગૌતમના નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમના આપ ગૌતમ અગ્રણી છો, મદદકાર છો, પ્રોત્સાહન આપનાર છો;",
+  "mn4:2.4": "અને એ લોકો આપ ગૌતમનું ઉદાહરણ અનુસરે છે”."
 }
