--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -34,7 +34,7 @@
   "pli-tv-bu-vb-ss13:1.4.3": "“I’m going to Sāvatthī to see the Buddha.” ",
   "pli-tv-bu-vb-ss13:1.4.4": "“Well then, would you please pay respect at the Buddha’s feet in my name and say, ",
   "pli-tv-bu-vb-ss13:1.4.5": "‘Venerable Sir, the monastery at Kīṭāgiri has been corrupted. ",
-  "pli-tv-bu-vb-ss13:1.4.6": "Assaji and Punabbasuka are the resident monks there. They are bad and shameless, ",
+  "pli-tv-bu-vb-ss13:1.4.6": "The bad and shameless monks Assaji and Punabbasuka are staying there. ",
   "pli-tv-bu-vb-ss13:1.4.7": "and are misbehaving in a many ways. ",
   "pli-tv-bu-vb-ss13:1.4.8": "They plant flowering trees, water them … And they misbehave in a variety of ways. ",
   "pli-tv-bu-vb-ss13:1.4.9": "Those who previously had faith and confidence have now lost it, ",
