--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "sn22.79:11.15": "„Leiden, Herr.“ ",
   "sn22.79:11.16": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn22.79:11.17": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "sn22.79:11.18": "„Nein, Herr.“ "
+  "sn22.79:11.18": "„Nein, Herr.“ ",
+  "sn22.79:11.19": "„Daher solltet ihr jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
