--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "sn22.79:11.17": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.79:11.18": "„Nein, Herr.“ ",
   "sn22.79:11.19": "„Daher solltet ihr jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "sn22.79:11.20": "Ihr solltet jegliche Art von Gefühl … "
+  "sn22.79:11.20": "Ihr solltet jegliche Art von Gefühl … ",
+  "sn22.79:11.21": "jegliche Art von Wahrnehmung … "
 }
