--- a/translation/de/sabbamitta/sutta/sn/sn18/sn18.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn18/sn18.10_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "sn18.10:1.4": "„Unbeständig, Herr.“ … ",
   "sn18.10:1.5": "„Ist Gefühl …“ …  ",
   "sn18.10:1.6": "„Ist Wahrnehmung …“ …  ",
-  "sn18.10:1.7": "Entscheidungen … ",
+  "sn18.10:1.7": "„Sind Entscheidungen …“ …  ",
   "sn18.10:1.8": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn18.10:1.9": "„Unbeständig, Herr.“ … ",
   "sn18.10:1.10": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
